# bo

./: app.py  pyproject.toml  requirement.txt  setup.py
assets/: rtl.css
database/: auth.py  crud.py  db.sqlite3  models.py
pages/: contacts.py  entrant.py  jointe.py  login.py  parametre.py  rappel.py  sortant.py
streamlit/: config.toml
